--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
-<h1>Este es un sitio web de prueba de GitHub Page</h1>
-<p>Fue creado por Humberto Vasquez</p>
-<p><img src="https://66.media.tumblr.com/9162e8107c8fffe003ca0a9697b57795/tumblr_pjn1ppLJak1vubgfj_1280.gif" /></p>
+<!DOCTYPE HTML>
+<!--
+	Introspect by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>Template</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="index.html" class="logo">template</a>
+				</div>
+			</header>
+			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+
+		<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					
+					<h1>Introspect: <span>A free + amet mi ullamcorper vehicula<br />
+						Pellentesque a</span></h1>
+					
+				</div>
+			</section>
+
+		<!-- One -->
+			<section id="one">
+				<div class="inner">
+					<header>
+						<h2>Magna Etiam Lorem</h2>
+					</header>
+					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<section id="footer">
+					<div class="copyright">
+						&copy; template
+					</div>
+				</div>
+			</section>
+	</body>
+</html>
