--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
 -->
 <html>
 	<head>
-		<title>Template</title>
-		<meta charset="utf-8" />
+        <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <title>Template</title>
+
+        <!--Start of Tawk.to Script-->  
+        <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/5ec777e0c75cbf1769ee4ee0/default';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+        </script>
+        <!--End of Tawk.to Script-->
+
 	</head>
 	<body>
 
