--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <title>Template</title>
+		 
+		<script>
+			function initFreshChat() {
+			  window.fcWidget.init({
+				token: "b51779e1-57f7-4c8f-9b67-504b6bb6d982",
+				host: "https://wchat.freshchat.com"
+			  });
+			}
+			function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+		</script>
 
         <!--Start of Tawk.to Script-->  
         <script type="text/javascript">
