--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 		<script>
 			function initFreshChat() {
 			  window.fcWidget.init({
-				token: "b51779e1-57f7-4c8f-9b67-504b6bb6d982",
+				token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
 				host: "https://wchat.freshchat.com"
 			  });
 			}
 			function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
-		</script>
-
-        <!--Start of Tawk.to Script-->  
+		  </script>
+        <!--Start of Tawk.to Script  
         <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
@@ -33,7 +32,8 @@
         s0.parentNode.insertBefore(s1,s0);
         })();
         </script>
-        <!--End of Tawk.to Script-->
+		<!--End of Tawk.to Script-->
+	-->
 
 	</head>
 	<body>
