--- a/index.html
+++ b/index.html
@@ -1,77 +1,61 @@
 <!DOCTYPE HTML>
 <!--
-	Introspect by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	Paradigm Shift by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-        <meta charset="utf-8" />
+		<title>webchat</title>
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <title>Template</title>
-		 
-		<script>
-			function initFreshChat() {
-			  window.fcWidget.init({
-				token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
-				host: "https://wchat.freshchat.com"
-			  });
-			}
-			function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
-		  </script>
-        <!--Start of Tawk.to Script  
-        <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5ec777e0c75cbf1769ee4ee0/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-        </script>
-		<!--End of Tawk.to Script-->
-	-->
-
 	</head>
-	<body>
+	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo">template</a>
-				</div>
-			</header>
-			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					
-					<h1>Introspect: <span>A free + amet mi ullamcorper vehicula<br />
-						Pellentesque a</span></h1>
-					
-				</div>
-			</section>
+				<!-- Intro -->
+					<section class="intro">
+						<header>
+							<h1>Pagina de prueba</h1>
+						</header>
+						<div class="content">
+							<span class="image fill" data-position="center"><img src="images/ima3.jpg" alt="" /></span>
+						</div>
+					</section>
+					<section>
+						<footer>
+							<ul class="items">
+								<li>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+									</ul>
+								</li>
+							</ul>
+						</footer>
+					</section>
 
-		<!-- One -->
-			<section id="one">
-				<div class="inner">
-					<header>
-						<h2>Magna Etiam Lorem</h2>
-					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
-				</div>
-			</section>
+				<!-- Copyright -->
+					<div class="copyright">&copy; Untitled. All rights reserved.</div>
 
-		<!-- Footer -->
-			<section id="footer">
-					<div class="copyright">
-						&copy; template
-					</div>
-				</div>
-			</section>
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
