--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
 <html>
 	<head>
 		<title>webchat</title>
-		<script>
-			function initFreshChat() {
-			  window.fcWidget.init({
-				token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
-				host: "https://wchat.freshchat.com"
-			  });
-			}
-			function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
-		  </script>
+		
         <!--Start of Tawk.to Script  
         <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -59,6 +51,32 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+			<script>
+				function initFreshChat() {
+				  window.fcWidget.init({
+					token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
+					host: "https://wchat.freshchat.com"
+				  });
+								// Copy the below lines under window.fcWidget.init inside initFreshChat function in the above snippet
+
+				// To set unique user id in your system when it is available
+				window.fcWidget.setExternalId("john.doe1987");
+
+				// To set user name
+				window.fcWidget.user.setFirstName("John");
+
+				// To set user email
+				window.fcWidget.user.setEmail("john.doe@gmail.com");
+
+				// To set user properties
+				window.fcWidget.user.setProperties({
+				plan: "Estate",                 // meta property 1
+				status: "Active"                // meta property 2
+				});
+				}
+				function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+			</script>
 
 	</body>
 </html>
