--- a/index.html
+++ b/index.html
@@ -58,25 +58,19 @@
 					token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
 					host: "https://wchat.freshchat.com"
 				  });
-								// Copy the below lines under window.fcWidget.init inside initFreshChat function in the above snippet
-
-				// To set unique user id in your system when it is available
-				window.fcWidget.setExternalId("john.doe1987");
-
-				// To set user name
-				window.fcWidget.user.setFirstName("John");
-
-				// To set user email
-				window.fcWidget.user.setEmail("john.doe@gmail.com");
-
-				// To set user properties
-				window.fcWidget.user.setProperties({
-				plan: "Estate",                 // meta property 1
-				status: "Active"                // meta property 2
-				});
 				}
 				function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 			</script>
+
+			<!-- Start of LiveChat (www.livechatinc.com) code -->
+			<script>
+				window.__lc = window.__lc || {};
+				window.__lc.license = 11970171;
+				;(function(n,t,c){function i(n){return e._h?e._h.apply(null,n):e._q.push(n)}var e={_q:[],_h:null,_v:"2.0",on:function(){i(["on",c.call(arguments)])},once:function(){i(["once",c.call(arguments)])},off:function(){i(["off",c.call(arguments)])},get:function(){if(!e._h)throw new Error("[LiveChatWidget] You can't use getters before load.");return i(["get",c.call(arguments)])},call:function(){i(["call",c.call(arguments)])},init:function(){var n=t.createElement("script");n.async=!0,n.type="text/javascript",n.src="https://cdn.livechatinc.com/tracking.js",t.head.appendChild(n)}};!n.__lc.asyncInit&&e.init(),n.LiveChatWidget=n.LiveChatWidget||e}(window,document,[].slice))
+			</script>
+			<noscript><a href="https://www.livechatinc.com/chat-with/11970171/" rel="nofollow">Chat with us</a>, powered by <a href="https://www.livechatinc.com/?welcome" rel="noopener nofollow" target="_blank">LiveChat</a></noscript>
+<!-- End of LiveChat code -->
+
 
 	</body>
 </html>
