--- a/index.html
+++ b/index.html
@@ -61,5 +61,12 @@
 				}
 				function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 			</script>
+		        <script>
+			window.fcWidget.user.clear().then(function() {
+			  console.log('User cleared');
+			  }, function() {
+			    console.log("User Not cleared");
+			  });
+			</script>
 	</body>
 </html>
