--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			    //Chat Form Title
 			    heading: 'GadgetGod',
 			    //Chat form Welcome Message
-			    textBanner: 'We can\'t wait to talk to you. But first, please take a couple of moments to tell us a bit about yourself.',
+			    textBanner: 'Hola, Bievenido al chat live de Mibus',
 			    //Submit Button Label.
 			    SubmitLabel: 'Start Chat',
 			    //Fields List - Maximum is 5
@@ -103,18 +103,6 @@
 				required: "yes",
 				//Error text to be displayed
 				error: "Please Enter a valid name"
-			      },
-			      field3 : {
-				//Type for Email - Do Not Change
-				type: "email",
-				//Label for Field Email, can be in any language
-				label: "Email",
-				//Default - Field ID for Email - Do Not Change
-				fieldId: "email",
-				//Required "yes" or "no"
-				required: "yes",
-				//Error text to be displayed
-				error: "Please Enter a valid Email"
 			      },
 			      field4 : {
 				//Type for Phone - Do Not Change
