--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			    //Form Header Text and Submit button text color.
 			    maintxColor: '#fff',
 			    //Chat Form Title
-			    heading: 'GadgetGod',
+			    heading: 'Transporte Masivo de Panamá',
 			    //Chat form Welcome Message
 			    textBanner: 'Hola, Bievenido al chat live de Mibus',
 			    //Submit Button Label.
@@ -80,18 +80,6 @@
 			    //Fields List - Maximum is 5
 			    //All the values are mandatory and the script will not work if not available.
 			    fields : {
-			      field1 : {
-				//Type can be either text or title
-				type: "title",
-				//Label for Field Title, can be in any language
-				label: "Title",
-				//Field ID for Title
-				fieldId: "title",
-				//Required "yes" or "no"
-				required: "yes",
-				//Error text to be displayed
-				error: "Please Enter a valid Title"
-			      },
 			      field2 : {
 				//Type for Name - Do not Change
 				type: "name",
@@ -116,20 +104,6 @@
 				//Error text to be displayed
 				error: "Please Enter a valid Phone Number"
 			      },
-			      field5 : {
-				//Type for Dropdown
-				type: "dropdown",
-				//Label for Field Dropdown, can be in any language
-				label: "Plan",
-				//Field ID for Plan Dropdown
-				fieldId: "plan",
-				//Required "yes" or "no"
-				required: "yes",
-				//Error text to be displayed
-				error: "Please select an option",
-				//Options for the Dropdown field
-				options: ['Sprout','Blossom','Garden','Estate','Forest']
-			      }
 			    }
 			  };
 			  window.fcSettings = {
