--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 		
-		        <script>
+		    <script>
 			window.fcWidget.user.clear().then(function() {
 			  console.log('User cleared');
 			  }, function() {
 			    console.log("User Not cleared");
 			  });
 			</script>
+
+			<!-- Instalacion del freshchat. -->
 			<script>
 				function initFreshChat() {
 				  window.fcWidget.init({
@@ -64,7 +66,9 @@
 				}
 				function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 			</script>
-		         <script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.js"></script>
+				 <script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.js"></script>
+
+			<!--Formulario de entrada de datos del usuario. -->	 
 			<script>
 			  var preChatTemplate = {
 			    //Form header color and Submit button color.
@@ -76,7 +80,7 @@
 			    //Chat form Welcome Message
 			    textBanner: 'Hola, Bievenido al chat live de Mibus',
 			    //Submit Button Label.
-			    SubmitLabel: 'Start Chat',
+			    SubmitLabel: 'Comenzar chat',
 			    //Fields List - Maximum is 5
 			    //All the values are mandatory and the script will not work if not available.
 			    fields : {
@@ -84,25 +88,37 @@
 				//Type for Name - Do not Change
 				type: "name",
 				//Label for Field Name, can be in any language
-				label: "Name",
+				label: "Nombre",
 				//Default - Field ID for Name - Do Not Change
 				fieldId: "name",
 				//Required "yes" or "no"
 				required: "yes",
 				//Error text to be displayed
-				error: "Please Enter a valid name"
+				error: "Por favor introduce tu nombre"
 			      },
+				  field3 : {
+				//Type for Email - Do Not Change
+				type: "email",
+				//Label for Field Email, can be in any language
+				label: "Correo",
+				//Default - Field ID for Email - Do Not Change
+				fieldId: "email",
+				//Required "yes" or "no"
+				required: "yes",
+				//Error text to be displayed
+				error: "Por favor introduce tu correo"
+				  },
 			      field4 : {
 				//Type for Phone - Do Not Change
 				type: "phone",
 				//Label for Field Phone, can be in any language
-				label: "Phone",
+				label: "Teléfono",
 				//Default - Field ID for Phone - Do Not Change
 				fieldId: "phone",
 				//Required "yes" or "no"
-				required: "yes",
+				required: "no",
 				//Error text to be displayed
-				error: "Please Enter a valid Phone Number"
+				error: "Por favor introduce tu numero de teléfono"
 			      },
 			    }
 			  };
