prueba de placeholder

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				//Type for Name - Do not Change
 				type: "name",
 				//Label for Field Name, can be in any language
-				label: "Nombre",
+				label: "Nombre" , placeholder="Nombre de usuario",
 				//Default - Field ID for Name - Do Not Change
 				fieldId: "name",
 				//Required "yes" or "no"
