prueba de placeholder2

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 				//Type for Name - Do not Change
 				type: "name",
 				//Label for Field Name, can be in any language
-				label: "Nombre" , placeholder="Nombre de usuario",
+				label: "Nombre",
 				//Default - Field ID for Name - Do Not Change
-				fieldId: "name",
+				fieldId: "name", placeholder="Este campo es obligatorio",
 				//Required "yes" or "no"
 				required: "yes",
 				//Error text to be displayed
