prueba de placeholder3

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				//Label for Field Name, can be in any language
 				label: "Nombre",
 				//Default - Field ID for Name - Do Not Change
-				fieldId: "name", placeholder="Este campo es obligatorio",
+				fieldId: "name",
 				//Required "yes" or "no"
 				required: "yes",
 				//Error text to be displayed
@@ -115,6 +115,8 @@
 				label: "Teléfono",
 				//Default - Field ID for Phone - Do Not Change
 				fieldId: "phone",
+                // placeholder
+				placeholder:"Este campo es obligatorio",
 				//Required "yes" or "no"
 				required: "no",
 				//Error text to be displayed
