se anexo tawk.to nuevamente

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 			    console.log("User Not cleared");
 			  });
 			</script>
-
+			
+			<!-- COPIAR DESDE AQUI-->
 			<!-- Instalacion del freshchat. -->
 			<script>
 				function initFreshChat() {
@@ -122,7 +123,10 @@
 			      },
 			    }
 			  };
+
 			  window.fcSettings = {
+
+				  // Cambiar el Token
 			    token: "5194f5ed-fd2f-45df-8706-c34cb6770b1b",
 			    host: "https://wchat.freshchat.com",
 			    config: {
@@ -140,6 +144,8 @@
 			  };
 			</script>
 			<script src="https://wchat.freshchat.com/js/widget.js" async></script>
+
+			<!-- COPIAR ASTA AQUI-->
 
 	</body>
 </html>
