--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>webchat</title>
 		
-        <!--Start of Tawk.to Script  
+        <!--Start of Tawk.to Script-->  
         <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
@@ -20,7 +20,7 @@
         s0.parentNode.insertBefore(s1,s0);
         })();
         </script>
-		End of Tawk.to Script-->
+		<!--End of Tawk.to Script-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
