se cambio el color en html a

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 		<!-- BEGIN PHP Live! HTML Code [V3] -->
-		<span style="color: #0000FF; text-decoration: underline; line-height: 0px !important; cursor: pointer; position: fixed; bottom: 0px; right: 20px; z-index: 20000000;" id="phplive_btn_1593115736"></span>
+		<span style="color: #283c90; text-decoration: underline; line-height: 0px !important; cursor: pointer; position: fixed; bottom: 0px; right: 20px; z-index: 20000000;" id="phplive_btn_1593115736"></span>
 		<script data-cfasync="false" type="text/javascript">
 
 		(function() {
@@ -40,7 +40,7 @@
 		</script>
 		<!-- END PHP Live! HTML Code [V3] -->
 		
-		
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
